@@ -16,7 +16,7 @@
 	<classpathentry kind="lib" path="lib/java/test/junit.jar"/>
 	<classpathentry kind="lib" path="lib/java/test/hamcrest-core.jar"/>
 	<classpathentry kind="lib" path="lib/edu.cmu.sei.rtss.jldd.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/JavaParser/org.eclipse.core.contenttype_3.4.100.v20110423-0524.jar"/>
 	<classpathentry kind="lib" path="lib/JavaParser/org.eclipse.core.jobs_3.5.101.v20120113-1953.jar"/>
 	<classpathentry kind="lib" path="lib/JavaParser/org.eclipse.core.runtime_3.7.0.v20110110.jar"/>
