@@ -7,10 +7,13 @@ For information on how to run CPAchecker, see README.txt.
 Install CPAchecker -- Binary
 ----------------------------
 
-1. Install a Java Runtime Environment which is at least Java 6 compatible
+1. Install a Java Runtime Environment which is at least Java 7 compatible
    (e.g., Sun/Oracle JRE, OpenJDK).
    Cf. http://java.oracle.com/ or install a package from your distribution.
-   (Ubuntu: sudo apt-get install openjdk-6-jre)
+   (Ubuntu: sudo apt-get install openjdk-7-jre)
+   If you have multiple JVMs installed, consider making this the default JVM,
+   otherwise you will need to specify the JVM when running CPAchecker.
+   (Ubuntu: sudo update-alternatives --config java)
 
 2. Extract the content of the CPAchecker zip or tar file into a directory of your choice.
 
@@ -18,10 +21,14 @@ Install CPAchecker -- Binary
 Install CPAchecker -- Source
 ----------------------------
 
-1. Install a Java SDK which is at least Java 6 compatible
+1. Install a Java SDK which is at least Java 7 compatible
    (e.g., Sun/Oracle JDK, OpenJDK).
    Cf. http://java.oracle.com/ or install a package from your distribution.
-   (Ubuntu: sudo apt-get install openjdk-6-jdk)
+   (Ubuntu: sudo apt-get install openjdk-7-jdk)
+   If you have multiple JDKs installed, make sure that the commands "java"
+   and "javac" call the respective Java 7 binaries,
+   so put them in your PATH or change the system-wide default JDK.
+   (Ubuntu: sudo update-alternatives --config java; sudo update-alternatives --config javac)
 
 2. Install ant (anything since version 1.7 should be ok).
    (Ubuntu: sudo apt-get install ant)
