@@ -5,9 +5,9 @@
 
     <property environment="env"/>
     <property name="debuglevel" value="source,lines,vars"/>
-    <property name="source.format" value="1.6"/>
+    <property name="source.format" value="1.7"/>
     <property name="source.dir" value="src"/>
-    <property name="class.format" value="1.6"/>
+    <property name="class.format" value="1.7"/>
     <property name="class.dir" value="bin"/>
 
     <antversion property="ant.version.exact"/> <!-- Define property that contains the Ant version. -->
