@@ -11,8 +11,11 @@ DEFAULT_HEAP_SIZE="1200m"
 #------------------------------------------------------------------------------
 
 java_version="`$JAVA -version 2>&1 | grep "^java version" | cut -f2 -d\\\" | sed 's/\.//g' | cut -b1-2`"
-if [ -z "$java_version" -o "$java_version" -lt 16 ] ; then
-  echo "$JAVA not found or version less than 1.6" 1>&2
+if [ -z "$java_version" -o "$java_version" -lt 17 ] ; then
+  echo "Please install Java 1.7 or newer." 1>&2
+  echo "For Ubuntu: sudo apt-get install openjdk-7-jre" 1>&2
+  echo "If you have installed Java 7, but it is not in your PATH," 1>&2
+  echo "let the environment variable JAVA point to the \"java\" binary." 1>&2
   exit 1
 fi
 
